3_4 rate limiting/demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-backend
  template:
    metadata:
      labels:
        app: api-backend
    spec:
      containers:
        - name: api-backend
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.3
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: demo
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: api-backend
