3_4 rate limiting/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: demo
spec:
  parentRefs:
  - name: api-gateway
  rules:
  - backendRefs:
    - name: api-service
      port: 80
